add some code on data_preprocessing

--- a/Udemy_ML/Machine Learning A-Z (Codes and Datasets)/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/Python/data_preprocessing_practice.ipynb
+++ b/Udemy_ML/Machine Learning A-Z (Codes and Datasets)/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/Python/data_preprocessing_practice.ipynb
@@ -2,8 +2,694 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "id": "7a4ca58e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "6e8ec404",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>61000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>France</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>58000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>52000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>France</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>79000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>83000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>France</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>67000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country   Age   Salary Purchased\n",
+       "0   France  44.0  72000.0        No\n",
+       "1    Spain  27.0  48000.0       Yes\n",
+       "2  Germany  30.0  54000.0        No\n",
+       "3    Spain  38.0  61000.0        No\n",
+       "4  Germany  40.0      NaN       Yes\n",
+       "5   France  35.0  58000.0       Yes\n",
+       "6    Spain   NaN  52000.0        No\n",
+       "7   France  48.0  79000.0       Yes\n",
+       "8  Germany  50.0  83000.0        No\n",
+       "9   France  37.0  67000.0       Yes"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./Data.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "63559527",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['France', 44.0, 72000.0],\n",
+       "       ['Spain', 27.0, 48000.0],\n",
+       "       ['Germany', 30.0, 54000.0],\n",
+       "       ['Spain', 38.0, 61000.0],\n",
+       "       ['Germany', 40.0, nan],\n",
+       "       ['France', 35.0, 58000.0],\n",
+       "       ['Spain', nan, 52000.0],\n",
+       "       ['France', 48.0, 79000.0],\n",
+       "       ['Germany', 50.0, 83000.0],\n",
+       "       ['France', 37.0, 67000.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = df.iloc[:, :-1].values\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "021f57fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No', 'Yes', 'No', 'No', 'Yes', 'Yes', 'No', 'Yes', 'No', 'Yes'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = df.iloc[:, -1].values\n",
+    "Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "c82839fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "imputer.fit(X[:,1:3])\n",
+    "X[:,1:3] = imputer.transform(X[:,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "cb466733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['France', 44.0, 72000.0],\n",
+       "       ['Spain', 27.0, 48000.0],\n",
+       "       ['Germany', 30.0, 54000.0],\n",
+       "       ['Spain', 38.0, 61000.0],\n",
+       "       ['Germany', 40.0, 63777.77777777778],\n",
+       "       ['France', 35.0, 58000.0],\n",
+       "       ['Spain', 38.77777777777778, 52000.0],\n",
+       "       ['France', 48.0, 79000.0],\n",
+       "       ['Germany', 50.0, 83000.0],\n",
+       "       ['France', 37.0, 67000.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "7a842303",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.0, 0.0, 0.0, 44.0, 72000.0],\n",
+       "       [0.0, 0.0, 1.0, 27.0, 48000.0],\n",
+       "       [0.0, 1.0, 0.0, 30.0, 54000.0],\n",
+       "       [0.0, 0.0, 1.0, 38.0, 61000.0],\n",
+       "       [0.0, 1.0, 0.0, 40.0, 63777.77777777778],\n",
+       "       [1.0, 0.0, 0.0, 35.0, 58000.0],\n",
+       "       [0.0, 0.0, 1.0, 38.77777777777778, 52000.0],\n",
+       "       [1.0, 0.0, 0.0, 48.0, 79000.0],\n",
+       "       [0.0, 1.0, 0.0, 50.0, 83000.0],\n",
+       "       [1.0, 0.0, 0.0, 37.0, 67000.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "ct = ColumnTransformer(transformers=[('encoder',OneHotEncoder(), [0])], remainder='passthrough')\n",
+    "X = np.array(ct.fit_transform(X))\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "b6de3b53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "Y = le.fit_transform(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "5252246f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 1, 1, 0, 1, 0, 1])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "79d5f4de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X,Y, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "e9fb93fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 0.0, 1.0, 38.77777777777778, 52000.0],\n",
+       "       [0.0, 1.0, 0.0, 40.0, 63777.77777777778],\n",
+       "       [1.0, 0.0, 0.0, 44.0, 72000.0],\n",
+       "       [0.0, 0.0, 1.0, 38.0, 61000.0],\n",
+       "       [0.0, 0.0, 1.0, 27.0, 48000.0],\n",
+       "       [1.0, 0.0, 0.0, 48.0, 79000.0],\n",
+       "       [0.0, 1.0, 0.0, 50.0, 83000.0],\n",
+       "       [1.0, 0.0, 0.0, 35.0, 58000.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "36535fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 1.0, 0.0, 30.0, 54000.0],\n",
+       "       [1.0, 0.0, 0.0, 37.0, 67000.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "80faa939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 1, 1, 0, 1])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "f1fc70ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "3eed34c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, Normalizer\n",
+    "n_x_train = x_train.copy()\n",
+    "n_x_test = x_test.copy()\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "nl = Normalizer()\n",
+    "\n",
+    "n_x_train[:, 3:] = nl.fit_transform(n_x_train[:, 3:])\n",
+    "n_x_test[:, 3:] = nl.transform(n_x_test[:, 3:])\n",
+    "x_train[:, 3:] = sc.fit_transform(x_train[:, 3:])\n",
+    "x_test[:, 3:] = sc.transform(x_test[:, 3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "0d2bba6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 0.0, 1.0, -0.19159184384578545, -1.0781259408412425],\n",
+       "       [0.0, 1.0, 0.0, -0.014117293757057777, -0.07013167641635372],\n",
+       "       [1.0, 0.0, 0.0, 0.566708506533324, 0.633562432710455],\n",
+       "       [0.0, 0.0, 1.0, -0.30453019390224867, -0.30786617274297867],\n",
+       "       [0.0, 0.0, 1.0, -1.9018011447007988, -1.420463615551582],\n",
+       "       [1.0, 0.0, 0.0, 1.1475343068237058, 1.232653363453549],\n",
+       "       [0.0, 1.0, 0.0, 1.4379472069688968, 1.5749910381638885],\n",
+       "       [1.0, 0.0, 0.0, -0.7401495441200351, -0.5646194287757332]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "b5c69b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 0.0, 1.0, 0.0007457262883743449, 0.9999997219461129],\n",
+       "       [0.0, 1.0, 0.0, 0.0006271775769977084, 0.9999998033241241],\n",
+       "       [1.0, 0.0, 0.0, 0.0006111109969993461, 0.9999998132716572],\n",
+       "       [0.0, 0.0, 1.0, 0.000622950698798613, 0.9999998059661946],\n",
+       "       [0.0, 0.0, 1.0, 0.0005624999110107633, 0.9999998417969126],\n",
+       "       [1.0, 0.0, 0.0, 0.0006075948245554922, 0.9999998154142477],\n",
+       "       [0.0, 1.0, 0.0, 0.000602409529247809, 0.999999818551363],\n",
+       "       [1.0, 0.0, 0.0, 0.0006034481659893079, 0.9999998179251389]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "4458a922",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 1.0, 0.0, -1.4661817944830124, -0.9069571034860727],\n",
+       "       [1.0, 0.0, 0.0, -0.44973664397484414, 0.2056403393225306]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "341d53ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 1.0, 0.0, 0.0005555554698216934, 0.9999998456790481],\n",
+       "       [1.0, 0.0, 0.0, 0.0005522387217626696, 0.9999998475161855]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_x_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b9be2e9",
+   "metadata": {},
+   "source": [
+    "fit_transform을 test data set에 사용하면 자체적인 기준이 새로 잡히기 때문에 단 두개에 대한 표준화를 실시함. 아래는 예시)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "9523c5dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(X,Y, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "4eaffcb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = StandardScaler()\n",
+    "\n",
+    "x_train[:, 3:] = sc.fit_transform(x_train[:, 3:])\n",
+    "x_test[:, 3:] = sc.fit_transform(x_test[:, 3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "48d6bdf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 0.0, 1.0, -0.19159184384578545, -1.0781259408412425],\n",
+       "       [0.0, 1.0, 0.0, -0.014117293757057777, -0.07013167641635372],\n",
+       "       [1.0, 0.0, 0.0, 0.566708506533324, 0.633562432710455],\n",
+       "       [0.0, 0.0, 1.0, -0.30453019390224867, -0.30786617274297867],\n",
+       "       [0.0, 0.0, 1.0, -1.9018011447007988, -1.420463615551582],\n",
+       "       [1.0, 0.0, 0.0, 1.1475343068237058, 1.232653363453549],\n",
+       "       [0.0, 1.0, 0.0, 1.4379472069688968, 1.5749910381638885],\n",
+       "       [1.0, 0.0, 0.0, -0.7401495441200351, -0.5646194287757332]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "f096826f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 1.0, 0.0, -1.0, -1.0],\n",
+       "       [1.0, 0.0, 0.0, 1.0, 1.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test # -1과 1 두개로 나오는 걸 볼 수 있음."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "ed5d372a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 앞서 StandardScaler에 fit을 적용하여 분산의 기준을 정하고 그대로 transform을 시키면 문제 없음\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X,Y, test_size=0.2, random_state=1)\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "sc.fit(x_train[:, 3:])\n",
+    "x_train[:, 3:] = sc.transform(x_train[:, 3:])\n",
+    "x_test[:, 3:] = sc.transform(x_test[:, 3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "b15041f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 0.0, 1.0, -0.19159184384578545, -1.0781259408412425],\n",
+       "       [0.0, 1.0, 0.0, -0.014117293757057777, -0.07013167641635372],\n",
+       "       [1.0, 0.0, 0.0, 0.566708506533324, 0.633562432710455],\n",
+       "       [0.0, 0.0, 1.0, -0.30453019390224867, -0.30786617274297867],\n",
+       "       [0.0, 0.0, 1.0, -1.9018011447007988, -1.420463615551582],\n",
+       "       [1.0, 0.0, 0.0, 1.1475343068237058, 1.232653363453549],\n",
+       "       [0.0, 1.0, 0.0, 1.4379472069688968, 1.5749910381638885],\n",
+       "       [1.0, 0.0, 0.0, -0.7401495441200351, -0.5646194287757332]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "5bf15917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 1.0, 0.0, -1.4661817944830124, -0.9069571034860727],\n",
+       "       [1.0, 0.0, 0.0, -0.44973664397484414, 0.2056403393225306]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9e17d530",
+   "id": "781e1f4d",
    "metadata": {},
    "outputs": [],
    "source": []
